--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       </ul>
       <!-- end of footer icons -->
       <p class="copyright">
-        copyright &copy; backroads travel tour company <span id="date"></span>.
+        copyright &copy; RS travel tour company <span id="date"></span>.
         all rights reserved
       </p>
     </footer>
